Added img and audio tests

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <Body>
+    <body>
+        <img src="resources/header.jpg" alt="You too could visit this beautiful city with the help of our free cruise services!" width="600" height="300">
         <h1><b>YOU ARE A WINNER!</b></h1>
         <p><strong>Claim your free cruise today! Just call 1800-FREE-CRUISE to claim your fre</strong></p>
-    </Body>
+        <audio autoplay loop>
+            <source src="resources/you_are_a_winner.mp3" type="audio/mp3">
+          Your browser does not support the audio element.
+        </audio>
+    </body>
 </html>
