--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <img src="resources/header.jpg" alt="You too could visit this beautiful city with the help of our free cruise services!" width="600" height="300">
         <h1><b>YOU ARE A WINNER!</b></h1>
         <p><strong>Claim your free cruise today! Just call 1800-FREE-CRUISE to claim your fre</strong></p>
-        <audio autoplay loop>
+        <audio controls>
             <source src="resources/you_are_a_winner.mp3" type="audio/mp3">
           Your browser does not support the audio element.
         </audio>
