Complete rework, home page more or less done.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <img src="resources/header.jpg" alt="You too could visit this beautiful city with the help of our free cruise services!" width="600" height="300">
-        <h1><b>YOU ARE A WINNER!</b></h1>
-        <p><strong>Claim your free cruise today! Just call 1800-FREE-CRUISE to claim your fre</strong></p>
-        <audio controls>
-            <source src="resources/you_are_a_winner.mp3" type="audio/mp3">
-          Your browser does not support the audio element.
-        </audio>
+    <head>
+        <title>Homepage</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="./css/style.css">
+    </head>
+    <body class="home">
+        <nav>
+            <ul class="nav-list">
+                <li class="nav-list-item nav-active"><a href="./index.html">Home</a></li>
+                <li class="nav-list-item"><a href="./pages/writeups.html">Writeups</a></li>
+            </ul>
+        </nav>
+        <h1>Welcome to my, as of yet, static website.</h1>
+        <p>I'm not exactly sure as to what I plan to do with this website, but hopefully I'll add some more of my writeups, experiences, projects etc. in the future.</p>
+        <p>This is all for fun, really, so don't expect any sort of fixed schedule (that is, if anybody other than me visits this site).</p>
+        <p>By the way, just a reminder that this site is (permanently):</p>
+        <div id="construction">
+            <img src="./images/construction_man_left.gif" alt="Construction worker using a jackhammer.">
+            <img src="./images/construction_banner.gif" alt="Banner reading 'UNDER CONSTRUCTION'.">
+            <img src="./images/construction_man_right.gif" alt="Construction worker repeatedly hammering the ground.">
+        </div>
     </body>
 </html>
