Page anchors section styling improved

--- a/pages/writeups/sieberrsec_3.html
+++ b/pages/writeups/sieberrsec_3.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="writeup-description">
-            <p>This was my first real 'serious' CTF, apart from my various small YCEP experiences. All in all, even though about 99% of the challenges I solved were OSINT, I found the challenges a lot of fun and good learning experiences.</p>
+            <p>This was my first real 'serious' CTF, apart from my various small YCEP experiences. All in all, even though about 99% of the challenges I solved were OSINT, I found it to be a lot of fun and a good learning experience.</p>
             <p>Here are some of the more interesting ones I managed to solve, some during the CTF and some after the event.</p>
         </div>
         <div class="page-anchors">
